testsuite/bad/MultipleAssignmentTypes.flux
type MultipleAssignmentTypes {

}
attributes {
   int x, float y;
}